samples/_failures_safe/1761225018_720326_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_81b72848.c: In function ‘main’:
./samples/SAFE/__tmp_81b72848.c:173:5: error: expected ‘,’ or ‘;’ at end of input
  173 |     int token_count = 0
      |     ^~~
./samples/SAFE/__tmp_81b72848.c:173:5: error: expected declaration or statement at end of input
